--- a/src/main/resources/assets/brightness-auto-tune/lang/en_us.json
+++ b/src/main/resources/assets/brightness-auto-tune/lang/en_us.json
@@ -1,13 +1,19 @@
 {
-	"brightness-auto-tune.config.main": "Basic",
+	"brightness-auto-tune.config.main": "Main",
 	"brightness-auto-tune.config.main.least_brightness": "Least Brightness",
+	"brightness-auto-tune.config.main.least_brightness.tooltip.0": "Brightness to aproach when it is dark",
 	"brightness-auto-tune.config.main.most_brightness": "Most Brightness",
+	"brightness-auto-tune.config.main.most_brightness.tooltip.0": "Brightness to aproach when it is bright",
 	"brightness-auto-tune.config.main.tune_brightness": "Tune Brightness",
-	"brightness-auto-tune.config.main.tune_brightness.false.tooltip.0": "Brightness won't change",
-	"brightness-auto-tune.config.main.tune_brightness.true.tooltip.0": "Brightness varies depending on ambient light",
+	"brightness-auto-tune.config.main.tune_brightness.false.tooltip.0": "Toggle brightness auto-tuning",
+	"brightness-auto-tune.config.main.tune_brightness.false.tooltip.1": "Brightness is fixed and will not change",
+	"brightness-auto-tune.config.main.tune_brightness.true.tooltip.0": "Toggle brightness auto-tuning",
+	"brightness-auto-tune.config.main.tune_brightness.true.tooltip.1": "Brightness adjusts against ambient light",
 	"brightness-auto-tune.config.main.tune_speed": "Tune Speed",
-	"brightness-auto-tune.config.main.tune_speed.0.0.tooltip.0": "Brightness won't change",
-	"brightness-auto-tune.config.main.tune_speed.1.0.tooltip.0": "Brightness instantly changes",
-	"brightness-auto-tune.config.main.tune_speed.tooltip.0": "Brightness changes gradually",
+	"brightness-auto-tune.config.main.tune_speed.0.0.tooltip.0": "Increase or decrease tuning speed",
+	"brightness-auto-tune.config.main.tune_speed.0.0.tooltip.1": "Brightness will not change",
+	"brightness-auto-tune.config.main.tune_speed.1.0.tooltip.0": "Increase or decrease tuning speed",
+	"brightness-auto-tune.config.main.tune_speed.1.0.tooltip.1": "Brightness instantly changes",
+	"brightness-auto-tune.config.main.tune_speed.tooltip.0": "Increase or decrease tuning speed",
 	"brightness-auto-tune.config.title": "Brightness Auto Tune Config"
 }
